--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -790,3 +790,18 @@ author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
 	Howpublished = {\url{https://geodynamics.org/cig/projects/saga/}},
 	Note = {Accessed: 2016-04-06},
 	Title = {{Software for Science: Getting Credit for Code}}}
+
+@misc{ssi-citation-files,
+	Author = {Robin Wilson},
+	Howpublished = {\url{http://www.software.ac.uk/blog/2013-09-02-encouraging-citation-software-introducing-citation-files}},
+	Note = {Accessed: 2016-04-06},
+	Title = {Encouraging citation of software -- introducing {CITATION} files}}
+
+@techreport{software-discovery-index,
+	Author = {Owen White and Asif Dhar and Vivien Bonazzi and Jennifer Couch and Chris Wellington},
+	Institution = {NIH},
+	Key = {{Software Discovery Index Meeting Report}},
+	Note = {\url{http://www.softwarediscoveryindex.org/}},
+	Title = {{NIH} {S}oftware {D}iscovery {I}ndex {M}eeting {R}eport},
+	Type = {Copy of archived content from final document},
+	Year = {2014}}
