update refs and cleanup workshop sentence

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -191,9 +191,7 @@ The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in 
 
 While not a strictly machine-readable solution, Wilson in a blog post on the Software Sustainability Institute (SSI) website suggests that software authors include a \texttt{CITATION} file that documents exactly how the authors of the software would like to be cited by others~\cite{ssi-citation-files}.
 
-Perhaps in recognition of the general desire to improve rates software citation, a number of workshops specifically aimed at addressing issues around software citation have been hosted (and sponsored) by funders and agencies in both the US (NFS, NIH and private foundations) and the UK (STFC, JISC, Wellcome Trust) (~\cite{swdatacite}, ~\cite{ssisoftwarecredit}, ~\cite{aas-software-index}, ~\cite{saga}, ).
-
-\knnote{Workshop reports} \cite{Sufi:2014en,Ahalt:2015ve}; Software Publishing Special Interest Group~\cite{Allen:2015ub}
+In recognition of the general desire to improve rates software citation, funders and agencies in both the US (NFS, NIH and private foundations) and the UK (STFC, JISC, Wellcome Trust) have hosted (and sponsored) a number of workshops specifically aimed at addressing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 These include the transitive credit via JSON-LD scheme~\cite{Katz:2015aa} that assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
