--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -769,23 +769,27 @@ author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
 	Key = {SSI Software Credit},
 	Howpublished = {\url{http://www.software.ac.uk/software-credit}},
 	Note = {Accessed: 2016-04-06},
+    Year = {2015},
 	Title = {{Software Credit Workshop}}}
 
 @misc{aas-software-index,
 	Author = {Laura Nor\'en},
 	Howpublished = {\url{http://astronomy-software-index.github.io/2015-workshop/}},
 	Note = {Accessed: 2016-04-06},
+    Year = {2015},
 	Title = {Invitation to comment on a proposal for a cohesive research software citation-enabling platform}}
 
 @misc{saga,
 	Key = {Saga Software Credit},
 	Howpublished = {\url{https://geodynamics.org/cig/projects/saga/}},
 	Note = {Accessed: 2016-04-06},
+    Year = {2015},
 	Title = {{Software for Science: Getting Credit for Code}}}
 
 @misc{ssi-citation-files,
 	Author = {Robin Wilson},
 	Howpublished = {\url{http://www.software.ac.uk/blog/2013-09-02-encouraging-citation-software-introducing-citation-files}},
+    Year = {2013},
 	Note = {Accessed: 2016-04-06},
 	Title = {Encouraging citation of software -- introducing {CITATION} files}}
 
