--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -189,7 +189,7 @@ Some of the observations and recommendations made here come from their efforts, 
 Currently, services including Zenodo and fig\textbf{share} allow software developers to obtain DOIs for software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-While not a strictly machine-readable solution, Wilson in a blog post on the Software Sustainability Institute (SSI) website suggests that software authors include a \texttt{CITATION} file that documents exactly how the authors of the software would like to be cited by others~\cite{ssi-citation-files}.
+While not a strictly machine-readable solution, Wilson suggested that software authors include a \texttt{CITATION} file that documents exactly how the authors of the software would like to be cited by others~\cite{ssi-citation-files}.
 
 In recognition of the general desire to improve rates software citation, funders and agencies in both the US (NFS, NIH and private foundations) and the UK (STFC, JISC, Wellcome Trust) have hosted (and sponsored) a number of workshops specifically aimed at addressing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
 
@@ -251,24 +251,22 @@ The authors of this paper are currently leading the FORCE11 Software Citation Wo
 The draft principles document~\cite{SoftwareCitation2016}, which is adapted from an earlier set of principles for data citation~\cite{DataCitation2014}, discusses how to decide what software to cite:
 
 \begin{quote}
-What software should be cited is the decision of the author(s) of the research work, in the context of community norms and practices, and in most scientific communities, these are currently in flux.
-In general, we believe that any software on which a research product directly depends should be cited, if it significantly contributes to the research product.
-Again, the specific decision of what is significant must be made by the author(s) of the product.
+What software should be cited is the decision of the author(s) of the research work in the context of community norms and practices, and in most research communities, these are currently in flux.
+In general, we believe that software should be cited on the same basis as any other research product such as a paper or book; that is, authors should cite the appropriate set of software products just as they cite the appropriate set of papers.
+Again, the specific decision of what is appropriate must be made by the author(s) of the product.
 However, an illustrative example is the use of Microsoft Excel in research.
-We suggest that if Excel is used to simply store and plot data, it does not need to be cited, but if it is used for statistical analysis, it should be.  Similarly, general software for conducting library research (e.g., JSTOR Mobile App), writing research papers (e.g., \LaTeX), scientific presentations (e.g., Powerpoint) or communications (e.g., Skype) should not be cited.
+We suggest that if Excel is used to simply store and plot data, it does not need to be cited, but if it is used for statistical analysis, it should be.  Similarly, general software for conducting library research (e.g., JSTOR Mobile App), writing research papers (e.g., \LaTeX), research presentations (e.g., Powerpoint) or communications (e.g., Skype) should not be cited.
 This recommendation matches that of the Purdue Online Writing Lab: ``Do not cite standard office software (e.g. Word, Excel) or programming languages.  Provide references only for specialized software.''~\cite{powl-citing-software}
-
-Note that some software which is or could be captured as part of data provenance may not be cited.
-Citation is a record of software that is important to the research outcome, where provenance is a record of all steps (including software) used to generated particular data within the research process.
-This implies that for a data research product, provenance data will include all cited software, but not necessarily vice versa.
-Similarly, the software metadata that is recorded as part of data provenance should be a superset of the metadata recorded as part of software citation.
-And the data recorded for reproducibility should also be a superset of the metadata recorded as part of software citation.
-These statements may also be true for software products.
-In general, we intend the software citation principles to cover the minimum of what is necessary for software citation for the purpose of software identification.
-Other use cases (e.g., provenance, reproducibility) may lead to additional requirements (i.e., enhanced metadata).
+%
+%Note that some software which is or could be captured as part of data provenance may not be cited.
+%Citation is a record of software that is important to the research outcome, where provenance is a record of all steps (including software) used to generated particular data within the research process.
+%This implies that for a data research product, provenance data will include all cited software, but not necessarily vice versa.
+%Similarly, the software metadata that is recorded as part of data provenance should be a superset of the metadata recorded as part of software citation.
+%And the data recorded for reproducibility should also be a superset of the metadata recorded as part of software citation.
+%These statements may also be true for software products.
+%In general, we intend the software citation principles to cover the minimum of what is necessary for software citation for the purpose of software identification.
+%Other use cases (e.g., provenance, reproducibility) may lead to additional requirements (i.e., enhanced metadata).
 \end{quote}
-\knnote{I worry that including this whole note is too much, especially if we plan to publish the principles} \katznote{feel free to edit to down}
-
 
 However, research and development efforts are needed to solve the remaining challenges.
 These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the the software itself is not publicly preserved?
