--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -801,3 +801,11 @@ author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
 	Title = {{NIH} {S}oftware {D}iscovery {I}ndex {M}eeting {R}eport},
 	Type = {Copy of archived content from final document},
 	Year = {2014}}
+
+@misc{rOpenSci-reviews,
+    Author = {Noam Ross andd Carl Boettiger and Jenny Bryan and Scott Chamberlain and Rich FitzJohn and Karthik Ram},
+    Howpublished = {\url{http://ropensci.org/blog/2016/03/28/software-review}},
+    Year = {2016},
+    Note = {Accessed: 2016-04-06},
+    Title = {Onboarding at {rOpenSci}: A Year in Reviews}
+    }
