added rOpenSci ref and comment

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -201,6 +201,8 @@ The related PaperBadger project~\cite{PaperBadger} offers digital contributor ba
 \knnote{be more specific about related work targeting challenges}
 
 \asnote{For key challenge `Determine standard practices for peer review of software':  we could cite the rOpenSci review process here: http://ropensci.org/blog/2016/03/28/software-review?}
+\knnote{Yes, absolutely! I went ahead and added a ref for you :)}
+\cite{rOpenSci-reviews}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Challenges and Research Directions}
