--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -803,7 +803,7 @@ author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
 	Year = {2014}}
 
 @misc{rOpenSci-reviews,
-    Author = {Noam Ross andd Carl Boettiger and Jenny Bryan and Scott Chamberlain and Rich FitzJohn and Karthik Ram},
+    Author = {Noam Ross and Carl Boettiger and Jenny Bryan and Scott Chamberlain and Rich FitzJohn and Karthik Ram},
     Howpublished = {\url{http://ropensci.org/blog/2016/03/28/software-review}},
     Year = {2016},
     Note = {Accessed: 2016-04-06},
