cleaned up refs

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -264,7 +264,6 @@
 	Series = {SECSE},
 	Title = {How Do Scientists Develop and Use Scientific Software?},
 	Year = {2009},
-	url = {\url{http://dx.doi.org/10.1109/SECSE.2009.5069155}},
 	doi = {10.1109/SECSE.2009.5069155}
 }
 
@@ -289,7 +288,6 @@
 	Title = {Shining Light into Black Boxes},
 	Volume = {336},
 	Year = {2012},
-	Url = {\url{http://dx.doi.org/10.1126/science.1218263}},
 	doi={10.1126/science.1218263},
 }
 
@@ -304,7 +302,6 @@
 	Title = {Ten Simple Rules for Reproducible Computational Research},
 	Volume = {9},
 	Year = {2013},
-	Url = {\url{http://dx.doi.org/10.1371/journal.pcbi.1003285}},
 	doi={10.1371/journal.pcbi.1003285},
 }
 
@@ -319,7 +316,7 @@
 	Series = {TRUST '14},
 	Title = {Software in Reproducible Research: Advice and Best Practice collected from experiences at the Collaborations Workshop},
 	Year = {2014},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1145/2618137.2618140}}
+	Doi = {10.1145/2618137.2618140}}
 
 @article{YaleLawSchoolRoundtableonDataandCodeSharing:2010wf,
 	Author = {{Yale Law School Roundtable on Data and Code Sharing}},
@@ -332,7 +329,7 @@
 	Title = {Reproducible Research: Addressing the need for data and code sharing in computational science},
 	Volume = {12},
 	Year = {2010},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/MCSE.2010.113}}
+	Doi = {10.1109/MCSE.2010.113}}
 
 @article{Soergel:2015aa,
 	Author = {David A W Soergel},
@@ -343,7 +340,6 @@
 	Title = {Rampant software errors may undermine scientific results [version 2; referees: 2 approved]},
 	Volume = {3},
 	Year = {2015},
-	url = {\url{http://dx.doi.org/10.12688/f1000research.5930.2}},
 	doi = {10.12688/f1000research.5930.2},
 }
 
@@ -358,9 +354,7 @@
 	Pages = {e1001745},
 	Title = {Best Practices for Scientific Computing},
 	Volume = {12},
-	Year = {2014},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1371%2Fjournal.pbio.1001745},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1371/journal.pbio.1001745}}
+	Year = {2014}}
 
 @inproceedings{ontosoft,
 	Author = {Yolanda Gil and Varun Ratnakar and Daniel Garijo},
@@ -369,7 +363,8 @@
 	Date-Modified = {2016-03-23 01:30:36 +0000},
 	Month = {Oct.},
 	Title = {OntoSoft: Capturing Scientific Software Metadata},
-	Year = 2015}
+	Year = 2015,
+    Doi = {10.1145/2815833.2816955}}
 
 @article{10.1371/journal.pone.0136631,
 	Author = {Huang, Yi-Hung AND Rose, Peter W. AND Hsu, Chun-Nan},
@@ -377,14 +372,13 @@
 	Date-Modified = {2016-03-23 01:30:36 +0000},
 	Journal = {PLoS ONE},
 	Month = {08},
-	Note = {\url{http://dx.doi.org/10.1371/journal.pone.0136631}},
+	Doi = {10.1371/journal.pone.0136631},
 	Number = {8},
 	Pages = {1--17},
 	Publisher = {Public Library of Science},
 	Title = {Citing a Data Repository: A Case Study of the Protein Data Bank},
 	Volume = {10},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1371/journal.pone.0136631}}
+	Year = {2015}}
 
 @book{lipson2011cite,
 	Author = {Lipson, C.},
@@ -438,13 +432,12 @@
 	Issn = {2324-9250},
 	Journal = {Eos, Transactions American Geophysical Union},
 	Keywords = {Informatics, Science policy, Public Issues, informatics, citation},
-	Note = {\url{http://dx.doi.org/10.1029/2010EO340001}},
+	Doi = {10.1029/2010EO340001},
 	Number = {34},
 	Pages = {297--298},
 	Title = {Data Citation and Peer Review},
 	Volume = {91},
-	Year = {2010},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1029/2010EO340001}}
+	Year = {2010}}
 
 @article{10.7717/peerj-cs.1,
 	Abstract = {
@@ -457,12 +450,11 @@
 	Journal = {PeerJ Computer Science},
 	Keywords = {Data citation, Machine accessibility, Data archiving, Data accessibility},
 	Month = {5},
-	Note = {\url{https://dx.doi.org/10.7717/peerj-cs.1}},
+	Dou = {10.7717/peerj-cs.1},
 	Pages = {e1},
 	Title = {Achieving human and machine accessibility of cited data in scholarly publications},
 	Volume = {1},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.7717/peerj-cs.1}}
+	Year = {2015}}
 
 @article{VandeSompel2004,
 	Author = {Herbert {Van de Sompel} and Sandy Payette and John Erickson and Carl Lagoze and Simeon Warner},
@@ -584,7 +576,6 @@
 	Title = {Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE2)}},
 	Volume = {4},
 	Year = {2016},
-	url = {\url{http://dx.doi.org/10.5334/jors.85}},
 	doi = {10.5334/jors.85},
 }
 
@@ -596,7 +587,8 @@
 	Pages = {e11},
 	Title = {Community Recommendations for Sustainable Scientific Software},
 	Volume = {3},
-	Year = {2015}}
+	Year = {2015},
+    Doi = {10.5334/jors.bt}}
 
 @article{Howison2015,
 	Author = {Howison, James and Bullard, Julia},
@@ -606,8 +598,7 @@
 	Journal = {Journal of the Association for Information Science and Technology},
 	Note = {In press},
 	Title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1002/asi.23538}}
+	Year = {2015}}
 
 @techreport{wssspe2_petre,
 	Author = {Marian Petre and Greg Wilson},
@@ -626,7 +617,7 @@
 	Institution = {figshare},
 	Title = {Accurately Citing Software and Algorithms Used in Publications},
 	Year = {2013},
-	Bdsk-Url-1 = {http://dx.doi.org/10.6084/m9.figshare.785731.v1}}
+    Doi = {10.6084/m9.figshare.785731.v1}}
 
 @article{WSSSPE1,
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
@@ -640,8 +631,7 @@
 	Pages = {e6},
 	Title = {Summary of the First Workshop on Sustainable Software for Science: Practice and Experiences ({WSSSPE1})},
 	Volume = {2},
-	Year = {2014},
-	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.an}}
+	Year = {2014}}
 
 @article{WSSSPE3,
 	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
@@ -672,8 +662,7 @@
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
 	Volume = {3},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.by}}
+	Year = {2015}}
 
 @misc{powl-citing-software,
 	Author = {{Purdue Online Writing Lab}},
@@ -691,7 +680,6 @@
     year = {2014},
     month = {03},
     volume = {9},
-    url = {\url{http://dx.doi.org/10.1371%2Fjournal.pone.0092590}},
     pages = {1--9},
     number = {3},
     doi = {10.1371/journal.pone.0092590}
@@ -707,7 +695,6 @@
  location = {Hangzhou, China},
  pages = {513--522},
  numpages = {10},
- url = {\url{http://doi.acm.org/10.1145/1958824.1958904}},
  doi = {10.1145/1958824.1958904},
  acmid = {1958904},
  publisher = {ACM},
@@ -725,7 +712,6 @@
  location = {San Antonio, Texas, USA},
  pages = {423--434},
  numpages = {12},
- url = {\url{http://doi.acm.org/10.1145/2441776.2441825}},
  doi = {10.1145/2441776.2441825},
  acmid = {2441825},
  publisher = {ACM},
@@ -740,23 +726,19 @@
  issue={3},
  year={2015},
  month={Summer},
- url={/url{http://dx.doi.org/10.3998/3336451.0018.308}},
  doi={10.3998/3336451.0018.308},
  journal={The Journal of Electronic Publishing},
 }
 
 @article{Pan2015,
-title = "Assessing the impact of software on science: A bootstrapped learning of software entities in full-text papers ",
-journal = "Journal of Informetrics ",
-volume = "9",
-number = "4",
-pages = "860 - 871",
-year = "2015",
-note = "",
-issn = "1751-1577",
-doi = "http://dx.doi.org/10.1016/j.joi.2015.07.012",
-url = "http://www.sciencedirect.com/science/article/pii/S1751157715300602",
-author = "Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua",
+title = {Assessing the impact of software on science: A bootstrapped learning of software entities in full-text papers},
+journal = {Journal of Informetrics},
+volume = {9},
+number = {4},
+pages = {860--871},
+year = {2015},
+doi = {10.1016/j.joi.2015.07.012},
+author = {Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua},
 }
 
 @misc{swdatacite,
