a few minor edits to table

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -229,13 +229,13 @@ Establish mechanisms for software to cite other software (i.e., dependencies) &
 Software publication as software papers allows this. For software that is directly published, this is an open challenge with no obvious path forward \\
 
 Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem &
-The FORCE11 software citation implementation working group will also work on this, in collaboration with publishers and indexers \\
+The FORCE11 Software Citation Implementation Working Group will also work on this, in collaboration with publishers and indexers \\
 
 Determine standard practices for peer review of software &
 Professional societies and science communities need to determine how this will happen \\
 
 Increase cultural acceptance of the concept of software as a digital product &
-Acceptance will happen over time; unclear how to accelerate \\
+Acceptance will happen over time; unclear how to accelerate this process \\
 \bottomrule
 \end{tabular}}
 \end{table}
