added FORCE11 to data citation ref for consistency

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -209,7 +209,7 @@ The related PaperBadger project~\cite{PaperBadger} offers digital contributor ba
 \section{Challenges and Research Directions}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-Key challenges and research directions (with possible solutions\slash methods) are shown in Table~\ref{tab:challenges}.
+Key challenges and research directions (with possible solutions\slash methods) are summarized in Table~\ref{tab:challenges}.
 
 \rowcolors{2}{}{lightgray}
 \begin{table}[htbp]%
