--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -513,7 +513,7 @@
 
 @misc{DataCitation2014,
 	Address = {San Diego, CA},
-	Author = {{Data Citation Synthesis Group}},
+	Author = {{FORCE 11 Data Citation Synthesis Group}},
 	Date-Added = {2016-01-13 07:09:40 +0000},
 	Date-Modified = {2016-01-13 07:09:56 +0000},
 	Dskeditor = {Maryann Martone},
