changes in related work, including removing `scheme' which has a negative connotation in US English

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -189,14 +189,14 @@ Some of the observations and recommendations made here come from their efforts, 
 Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-In recognition of the general desire to improve rates software citation, funders and agencies in both the US (NFS, NIH and private foundations) and the UK (STFC, JISC, Wellcome Trust) have hosted (and sponsored) a number of workshops specifically aimed at addressing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
+In recognition of the general desire to improve rates software citation, funders and agencies in both the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at addressing \katznote{addressing or discussing?} issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
 \knnote{Anything we can say to tie these together? What didn't they do?}
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
-In an effort to ease the process of citing software, Wilson suggested that software authors include a \texttt{CITATION} file that documents exactly how the authors of the software would like to be cited by others~\cite{ssi-citation-files}.
+In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file that documents exactly how the authors of the software would like to be cited by others~\cite{ssi-citation-files}.
 However, this is not a strictly machine-readable solution.
-Other proposals include the transitive credit via JSON-LD scheme~\cite{Katz:2015aa} that assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
-The Project CRediT (contributor role taxonomy) scheme~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
+Another proposal is transitive credit via JSON-LD~\cite{Katz:2015aa}, which assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
+Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
 The related PaperBadger project~\cite{PaperBadger} offers digital contributor badges associated with each role, connecting publications with people via DOI and ORCID, respectively.
 
 \knnote{be more specific about related work targeting challenges}
