Adding some background about indexing

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -199,7 +199,7 @@ Another proposal is transitive credit via JSON-LD~\cite{Katz:2015aa}, which assi
 Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
 The related PaperBadger project~\cite{PaperBadger} offers digital contributor badges associated with each role, connecting publications with people via DOI and ORCID, respectively.
 
-\knnote{be more specific about related work targeting challenges}
+Even if there were an adopted, standard method for software citation there is currently a distinct lack of support for indexing any such citations by indexers (e.g., Web of Science, Scopus, Google Scholar). One possible exception to this is within the astrophysics community where indexing of citations is also carried out by an independent, community run service (NASA ADS ~\cite{nasaads}). NASA ADS already index references to software listed in the Astrophysics Source Code Library~\cite{ascl} and following a AAS/GitHub sponsored meeting in 2015 ~\cite{aas-software-index} made a committment to expand upon this functionality.
 
 \asnote{For key challenge `Determine standard practices for peer review of software':  we could cite the rOpenSci review process here: http://ropensci.org/blog/2016/03/28/software-review?}
 \knnote{Yes, absolutely! I went ahead and added a ref for you :)}
