--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -791,3 +791,15 @@ author = {Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua},
     Note = {Accessed: 2016-04-06},
     Title = {Onboarding at {rOpenSci}: A Year in Reviews}
     }
+
+@misc{nasaads,
+	Author = {ADS personnel},
+	Howpublished = {\url{http://adswww.harvard.edu/}},
+	Note = {Accessed: 2016-04-07},
+	Title = {{The SAO/NASA Astrophysics Data System}},
+	Year = {2016}}
+
+@misc{ascl,
+	Author = {{Astrophysics Source Code Library}},
+	Howpublished = {\url{http://ascl.net}},
+	Note = {Accessed: 2016-04-07}}
