--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -201,9 +201,9 @@ The related PaperBadger project~\cite{PaperBadger} offers digital contributor ba
 
 Even if there were an adopted, standard method for software citation there is currently a distinct lack of support for indexing any such citations by indexers (e.g., Web of Science, Scopus, Google Scholar). One possible exception to this is within the astrophysics community where indexing of citations is also carried out by an independent, community run service (NASA ADS ~\cite{nasaads}). NASA ADS already index references to software listed in the Astrophysics Source Code Library~\cite{ascl} and following a AAS/GitHub sponsored meeting in 2015 ~\cite{aas-software-index} made a committment to expand upon this functionality.
 
-\asnote{For key challenge `Determine standard practices for peer review of software':  we could cite the rOpenSci review process here: http://ropensci.org/blog/2016/03/28/software-review?}
-\knnote{Yes, absolutely! I went ahead and added a ref for you :)}
-\cite{rOpenSci-reviews}
+Finally on the topic of peer review of software, the authors note that there is a distinct lack of standardization around the practises of peer review. Journals  accepting `software' submissions (e.g., F1000Research, SoftwareX and JORS) often conflate the review of the submitted software with a review of research output produced \textit{by} the software. One exception to this is the rOpenSci community who recently published their review process~\cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci project.
+
+\asnote{This language might be too strong :point_up:}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Challenges and Research Directions}
