fixing small things

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -199,11 +199,10 @@ Another proposal is transitive credit via JSON-LD~\cite{Katz:2015aa}, which assi
 Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
 The related PaperBadger project~\cite{PaperBadger} offers digital contributor badges associated with each role, connecting publications with people via DOI and ORCID, respectively.
 
-Even if there were an adopted, standard method for software citation there is currently a distinct lack of support for indexing any such citations by indexers (e.g., Web of Science, Scopus, Google Scholar). One possible exception to this is within the astrophysics community where indexing of citations is also carried out by an independent, community run service (NASA ADS ~\cite{nasaads}). NASA ADS already index references to software listed in the Astrophysics Source Code Library~\cite{ascl} and following a AAS/GitHub sponsored meeting in 2015 ~\cite{aas-software-index} made a committment to expand upon this functionality.
+Even if there were an adopted, standard method for software citation there is currently a distinct lack of support for indexing any such citations by indexers (e.g., Web of Science, Scopus, Google Scholar). One possible exception to this is within the astrophysics community where indexing of citations is also carried out by an independent, community run service (NASA ADS~\cite{nasaads}). NASA ADS already index references to software listed in the Astrophysics Source Code Library~\cite{ascl} and following a AAS/GitHub sponsored meeting in 2015~\cite{aas-software-index} made a commitment to expand upon this functionality.
 
-Finally on the topic of peer review of software, the authors note that there is a distinct lack of standardization around the practises of peer review. Journals  accepting `software' submissions (e.g., F1000Research, SoftwareX and JORS) often conflate the review of the submitted software with a review of research output produced \textit{by} the software. One exception to this is the rOpenSci community who recently published their review process~\cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci project.
-
-\asnote{This language might be too strong :point_up:}
+Finally on the topic of peer review of software, the authors note that there is a distinct lack of standardization around the practices of peer review. Journals  accepting `software' submissions (e.g., F1000Research, SoftwareX and JORS) often conflate the review of the submitted software with a review of research output produced \textit{by} the software. One exception to this is the rOpenSci community who recently published their review process~\cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci project.
+\asnote{This language might be too strong}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Challenges and Research Directions}
