minor edits in introduction

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -158,14 +158,14 @@ emails: \href{mailto:kyle.niemeyer@oregonstate.edu}{kyle.niemeyer@oregonstate.ed
 \section{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-Modern science and engineering depend on software.
+Modern science and engineering research depends on software.
 A 2009 survey of scientists found that 91\% consider software important or very important to their research~\cite{Hannay:2009wp}.
 The scientific community uses citation to acknowledge traditional research results published in archival journals and conferences, but no such accepted standard exists to credit the considerable efforts that go into software---and most research software is not cited~\cite{Pan2015}.
 
 One method to increase the amount of software developed, shared, and credited is to treat a software release as a publication.
 There is good evidence that academics respond to incentives, including interview and survey data saying that increased citation would drive increased software development and sharing~\cite{howison-herbsleb2011,huang2013}.
 Furthermore, evidence indicates that research activity increases when outputs can be formally counted~\cite{mcnaught2015}.
-Finally, the evidence of success in direct citations to datasets~\cite{belter2014}---as opposed to indirect citations through publications---suggests similar positive benefits of software citation.
+Finally, evidence of success in direct citations to datasets~\cite{belter2014}---as opposed to indirect citations through publications---suggests similar positive benefits of software citation.
 
 In addition to the above benefits, since research results depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility~\cite{Sufi:2014en}.
 Provenance of research results and data requires, among other things, a record of the software used to generate or process that data~\cite{Sandve:2013gh,Wilson:2014aa}.
