edited detail of Dans affiliation

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -73,7 +73,7 @@
 ARFON M. SMITH
 \affil{GitHub, Inc.}
 DANIEL S. KATZ
-\affil{National Center for Supercomputing Applications \& Graduate School of Library and Information Science, University of Illinois Urbana-Champaign}}
+\affil{University of Illinois Urbana-Champaign}}
 % NOTE! Affiliations placed here should be for the institution where the
 %       BULK of the research was done. If the author has gone to a new
 %       institution, before publication, the (above) affiliation should NOT be changed.
@@ -148,7 +148,7 @@ Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manu
 A.\ M.\ Smith,
 GitHub, Inc.;
 D.\ S.\ Katz,
-University of Illinois;
+National Center for Supercomputing Applications \& Graduate School of Library and Information Science, University of Illinois Urbana-Champaign;
 emails: \href{mailto:kyle.niemeyer@oregonstate.edu}{kyle.niemeyer@oregonstate.edu}, \href{mailto:arfon@github.com}{arfon@github.com}, \href{mailto:d.katz@ieee.org}{d.katz@ieee.org}
 \end{bottomstuff}
 
