edits to related work section

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -793,13 +793,14 @@ author = {Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua},
     }
 
 @misc{nasaads,
-	Author = {ADS personnel},
+	Author = {Alberto Accomazzi and Michael J Kurtz and Carolyn Stern Grant and Edwin Henneken and Donna Thompson and Roman Chyla and Alex Holachek and Jonathan Elliott},
 	Howpublished = {\url{http://adswww.harvard.edu/}},
 	Note = {Accessed: 2016-04-07},
-	Title = {{The SAO/NASA Astrophysics Data System}},
+	Title = {The {SAO}/{NASA} {Astrophysics Data System}},
 	Year = {2016}}
 
 @misc{ascl,
 	Author = {{Astrophysics Source Code Library}},
 	Howpublished = {\url{http://ascl.net}},
-	Note = {Accessed: 2016-04-07}}
+	Note = {Accessed: 2016-04-07},
+    Year = {2016}}
