--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -189,20 +189,23 @@ Some of the observations and recommendations made here come from their efforts, 
 Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-In recognition of the general desire to improve rates software citation, funders and agencies in both the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at addressing \katznote{addressing or discussing?} issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
+In recognition of the general desire to improve software citation rates, funders and agencies in both the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at addressing \katznote{addressing or discussing?} issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
 \knnote{Anything we can say to tie these together? What didn't they do?}
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
-In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file that documents exactly how the authors of the software would like to be cited by others~\cite{ssi-citation-files}.
+In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}.
 However, this is not a strictly machine-readable solution.
 Another proposal is transitive credit via JSON-LD~\cite{Katz:2015aa}, which assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
 Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
 The related PaperBadger project~\cite{PaperBadger} offers digital contributor badges associated with each role, connecting publications with people via DOI and ORCID, respectively.
 
-Even if there were an adopted, standard method for software citation there is currently a distinct lack of support for indexing any such citations by indexers (e.g., Web of Science, Scopus, Google Scholar). One possible exception to this is within the astrophysics community where indexing of citations is also carried out by an independent, community run service (NASA ADS~\cite{nasaads}). NASA ADS already index references to software listed in the Astrophysics Source Code Library~\cite{ascl} and following a AAS/GitHub sponsored meeting in 2015~\cite{aas-software-index} made a commitment to expand upon this functionality.
+Even with an adopted, standard method for software citation, indexers (e.g., Web of Science, Scopus, Google Scholar) currently lack support for indexing any such citations.
+The astrophysics community represents one possible exception to this, where the independent, community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations. 
+The ADS already indexes references to software listed in the Astrophysics Source Code Library~\citeyear{ascl}, and made a commitment to expand upon this functionality following an AAS\slash GitHub-sponsored meeting~\cite{aas-software-index}.
 
-Finally on the topic of peer review of software, we note that there is a distinct lack of standardization around the practices of peer review. Journals  accepting `software' submissions (e.g., F1000Research, SoftwareX, and JORS) often conflate the review of the submitted software with a review of research output produced \textit{by} the software. One exception to this is the rOpenSci community, who recently published the review process~\cite{rOpenSci-reviews} they use to determine whether a package can become part of the rOpenSci project.
-\asnote{This language might be too strong} \katznote{seems ok to me}
+Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
+Journals accepting ``software'' submissions (e.g., \textit{F1000Research}, \textit{SoftwareX}, \textit{Computer Physics Communications}) often conflate review of the submitted software with a review of research output \textbf{produced by} the software.
+The rOpenSci community represents one exception to this, with a documented review process~\cite{rOpenSci-reviews} they use to determine whether a package can become part of the rOpenSci collection.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Challenges and Research Directions}
