--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -184,7 +184,7 @@ As a first step towards sustainable, reusable, and attributable software, effort
 \section{Related Work}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-Multiple organizations, including the WSSSPE Software Credit working group~\cite{WSSSPE1,WSSSPE2,WSSSPE3} and FORCE11 Software Citation Working Group~\citeyear{SCWG}, are working to standardize software citation practices.
+Multiple organizations, including the WSSSPE Software Credit working group~[\citeNP{WSSSPE1};\citeyearNP{WSSSPE2};\citeyearNP{WSSSPE3}] and FORCE11 Software Citation Working Group~\citeyear{SCWG}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the~\citeN{DataCitation2014} to standardize research data citation practices.
 Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
